# spotify-popularity-prediction

./: .gitignore  README.md  makefile  pyproject.toml
notebooks/: explo.ipynb  explo.ju.py
src/modelling/: constants.py  data_processing.py  train.py  train_utils.py
src/notebooks/: explo.ipynb  explo.ju.py
