[project]
name = "spotify-popularity-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.4.7",
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.6",
    "neopyter>=0.3.2",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
]
